블로그 목록 css 일부 수정

--- a/src/posts/1.md
+++ b/src/posts/1.md
@@ -2,6 +2,7 @@
 title: '[프로그래머스] 옹알이(1) / 매개변수 재할당 지양'
 date: '2020-01-01'
 category: 'Algorithm'
+summary: '프로그래머스 0단계 극악의 난이도 문제 옹알이 풀기'
 ---
 
 프로그래머스 0단계 극악의 난이도(정답률 : 29%)인 옹알이 문제를 풀게 되었다..매번 정답률에 지레 겁먹고 풀지 않고 넘겼는데 스터디 숙제로 풀게되어서 막상 풀어보니! 쉬웠다.
