--- a/src/posts/2.md
+++ b/src/posts/2.md
@@ -2,6 +2,7 @@
 title: 'nestjs 이미지 파일 여러개 업로드 구현하기 '
 date: '2020-01-01'
 category: 'Server'
+summary: '네스트로 이미지 파일 업로드 구현하기'
 ---
 
 클라이언트에서 form-data로 보낸 이미지 파일을 서버에서 받는 방법을 알아보자.
