--- a/src/posts/1.md
+++ b/src/posts/1.md
@@ -1,7 +1,7 @@
 ---
 title: '[프로그래머스] 옹알이(1) / 매개변수 재할당 지양'
-date: '2020-01-01'
-category: 'Algorithm'
+date: '2023-03-01'
+category: 'client'
 summary: '프로그래머스 0단계 극악의 난이도 문제 옹알이 풀기'
 ---
 
