--- a/src/posts/2.md
+++ b/src/posts/2.md
@@ -1,7 +1,7 @@
 ---
 title: 'nestjs 이미지 파일 여러개 업로드 구현하기 '
 date: '2020-01-01'
-category: 'Server'
+category: 'client'
 summary: '네스트로 이미지 파일 업로드 구현하기'
 ---
 
