--- a/src/posts/프로그래머스--옹알이-1----매개변수-재할당-지양.md
+++ b/src/posts/프로그래머스--옹알이-1----매개변수-재할당-지양.md
@@ -1,22 +1,21 @@
 ---
 title: '[프로그래머스] 옹알이(1) / 매개변수 재할당 지양'
-date: '2023-03-01'
-category: 'client'
-summary: '프로그래머스 0단계 극악의 난이도 문제 옹알이 풀기'
+date: '2023-03-25'
+category: ''
+summary: '프로그래머스 0단계 극악의 난이도(정답률 : 29%)인 옹알이 문제를 풀게 되었다..'
 ---
 
 프로그래머스 0단계 극악의 난이도(정답률 : 29%)인 옹알이 문제를 풀게 되었다..매번 정답률에 지레 겁먹고 풀지 않고 넘겼는데 스터디 숙제로 풀게되어서 막상 풀어보니! 쉬웠다.
 
-[문제 링크]
-https://school.programmers.co.kr/learn/courses/30/lessons/120956
-
+\[문제 링크\]  
+[https://school.programmers.co.kr/learn/courses/30/lessons/120956](https://school.programmers.co.kr/learn/courses/30/lessons/120956)  
 ![](https://velog.velcdn.com/images/jiwonyyy/post/f0468d30-daa9-4e85-8c96-176f5b31c8ee/image.png)
 
 ### 생각한 방식
 
-1. 말할 수 있는 단어들 array를 speakableWords라는 constants로 정의해두기
-2. speakableWords배열을 포문을 돌면서, babbling array에서 다른 문자로 치환해두기
-3. babbling에서 모든 알파벳이 치환된 단어 === 말할 수 있는 단어이므로, 그것들의 length구하기
+1.  말할 수 있는 단어들 array를 speakableWords라는 constants로 정의해두기
+2.  speakableWords배열을 포문을 돌면서, babbling array에서 다른 문자로 치환해두기
+3.  babbling에서 모든 알파벳이 치환된 단어 === 말할 수 있는 단어이므로, 그것들의 length구하기
 
 ### 나의 코드
 
@@ -51,7 +50,7 @@ const speakableWords = ['yap', 'ya', 'pa'];
 babbling = 'yapa';
 ```
 
-조카는 "yapa"를 말 할 수 있지만, 내가 짠 코드로는 for문을 돌면서 "yap"이 제거되고 "a"만 남아서 발음할 수 없는 단어로 분류된다..
+조카는 "yapa"를 말 할 수 있지만, 내가 짠 코드로는 for문을 돌면서 "yap"이 제거되고 "a"만 남아서 발음할 수 없는 단어로 분류된다..  
 이 부분은 아직 해결 못함..
 
 ### 뜻밖의 지식 : parameter 재할당
@@ -79,9 +78,8 @@ function solution(babbling) {
 - 매개변수 재할당은 eslint 규칙(no-param-reassign)으로 존재할만큼 지양해야하는 방법이라고 한다.
 - 요약하자면, 코드의 가독성과 유지보수성을 크게 해친다.
 
-1. 전달된 파라미터가 재할당되면, 이전 값을 가진 파라미터는 그 함수에 대해 아무런 의미가 없게 되어 코드의 복잡도를 높이고, 가독성을 해친다.
-
-2. 함수에서 파라미터로 전달받은 객체를 변경하면, 해당 객체를 사용하는 다른 코드에서 예기치 않은 결과가 발생하게 된다.
+1.  전달된 파라미터가 재할당되면, 이전 값을 가진 파라미터는 그 함수에 대해 아무런 의미가 없게 되어 코드의 복잡도를 높이고, 가독성을 해친다.
+2.  함수에서 파라미터로 전달받은 객체를 변경하면, 해당 객체를 사용하는 다른 코드에서 예기치 않은 결과가 발생하게 된다.
 
 간단한 예시 코드는 아래와 같다
 
@@ -106,5 +104,5 @@ const totalPrice = calculateTotalPrice(100, 0.1);
 
 같은 파라미터를 쓰는 다른 함수에서 부작용이 생긴다는 것을 알 수 있다
 
-문제 풀이만 쓸 계획이었는데, 파라미터 재할당에 대해서도 공부하게되고..
+문제 풀이만 쓸 계획이었는데, 파라미터 재할당에 대해서도 공부하게되고..  
 역시 블로그 포스팅은 백익무해!
