카테고리 수정

--- a/src/posts/2023-ICT-10대-트렌드-키워드-요약.md
+++ b/src/posts/2023-ICT-10대-트렌드-키워드-요약.md
@@ -1,7 +1,7 @@
 ---
 title: '2023 ICT 10대 트렌드 키워드 요약'
 date: '2022-12-10'
-category: ''
+category: 'memoir'
 summary: 'ICT 이슈에 대해서 알아보고 싶어서 찾다가, IITP에서 개최한 2023년 ICT 산업전망 컨퍼런스에서 나온 10대 이슈에 대해서 요약 정리를 해보았다'
 ---
 
