--- a/src/posts/멜론플레이트--1차-프로젝트-회고록.md
+++ b/src/posts/멜론플레이트--1차-프로젝트-회고록.md
@@ -1,7 +1,7 @@
 ---
 title: '[멜론플레이트] 1차 프로젝트 회고록'
 date: '2022-10-03'
-category: ''
+category: 'memoir'
 summary: '9/19~9/29 2주간의 대장정! 1차 프로젝트가 끝이 났다.. (!!) 정신없이 흘러간 2주를 회고해보고자 한다.'
 ---
 
