--- a/src/posts/우테코-프리코스--1주차-회고.md
+++ b/src/posts/우테코-프리코스--1주차-회고.md
@@ -1,7 +1,7 @@
 ---
 title: '[우테코 프리코스] 1주차 회고'
 date: '2022-11-02'
-category: ''
+category: 'memoir'
 summary: '우아한 테크코스 프리코스(이하 우테코)가 시작되었다. 간단하게 느낀 점, 과제 하면서 배운 점을 작성해보았다.'
 ---
 
