--- a/src/posts/우테코-프리코스--2주차-회고록.md
+++ b/src/posts/우테코-프리코스--2주차-회고록.md
@@ -1,10 +1,8 @@
 ---
-
 title: '[우테코 프리코스] 2주차 회고록'
 date: '2022-11-09'
-category: ''
-summary : '우아한 테크코스 2주차 과제 마친 뒤 배운 것들과 느낀점'
-
+category: 'memoir'
+summary: '우아한 테크코스 2주차 과제 마친 뒤 배운 것들과 느낀점'
 ---
 
 우테코 프리코스 2주차 과제 소감문 제출한 것에 간단한 내 벨로그 감성을 담은 코멘트 추가하여 포스팅해보고자 한다..  
