--- a/src/posts/우테코-프리코스--중복-닉네임-찾기.md
+++ b/src/posts/우테코-프리코스--중복-닉네임-찾기.md
@@ -1,7 +1,7 @@
 ---
 title: '[우테코 프리코스] 중복 닉네임 찾기'
 date: '2022-11-06'
-category: ''
+category: 'algorithm'
 summary: '2글자 이상 중복 닉네임을 가진 유저들의 이메일을 모아서 오름차순으로 정렬하기'
 ---
 
