--- a/src/posts/코딩테스트-풀기--로마문자-숫자로-바꾸기.md
+++ b/src/posts/코딩테스트-풀기--로마문자-숫자로-바꾸기.md
@@ -1,7 +1,7 @@
 ---
 title: '[코딩테스트 풀기] 로마문자 숫자로 바꾸기'
 date: '2022-09-05'
-category: ''
+category: 'algorithm'
 summary: '로마문자(string)을 인자로 받았을 때, 숫자로 바꾸는 방법'
 ---
 
