--- a/src/posts/클린아키텍처---15장.md
+++ b/src/posts/클린아키텍처---15장.md
@@ -1,7 +1,7 @@
 ---
 title: '[ 클린아키텍처 ] 15장. 아키텍처란?'
 date: '2022-12-06'
-category: ''
+category: 'books'
 summary: '< 좋은 아키텍트는 결정되지 않은 사항의 수를 최대화한다. >'
 ---
 
