--- a/src/posts/클린아키텍처--16장.md
+++ b/src/posts/클린아키텍처--16장.md
@@ -1,7 +1,7 @@
 ---
 title: '[클린아키텍처] 16장. 독립성'
 date: '2022-12-07'
-category: ''
+category: 'books'
 summary: '좋은 아키텍처는 “결합 분리 모드(시간이 지남에 따라 바뀌기 쉬움)”를 선택사항으로 남겨두어, 배포 규모에 따라 적합한 모드를 선택할 수 있게 함.'
 ---
 
