--- a/src/posts/프로그래머스--옹알이-1----매개변수-재할당-지양.md
+++ b/src/posts/프로그래머스--옹알이-1----매개변수-재할당-지양.md
@@ -1,7 +1,7 @@
 ---
 title: '[프로그래머스] 옹알이(1) / 매개변수 재할당 지양'
 date: '2023-03-25'
-category: ''
+category: 'algorithm'
 summary: '프로그래머스 0단계 극악의 난이도(정답률 : 29%)인 옹알이 문제를 풀게 되었다..'
 ---
 
