--- a/src/posts/우테코-프리코스--알파벳-뒤집기.md
+++ b/src/posts/우테코-프리코스--알파벳-뒤집기.md
@@ -1,7 +1,7 @@
 ---
 title: '[우테코 프리코스] 알파벳 뒤집기'
 date: '2022-11-02'
-category: ''
+category: 'algorithm'
 summary: '🚀 기능 요구 사항 어느 연못에 엄마 말씀을 좀처럼 듣지 않는 청개구리가 살고 있었다. 청개구리는 엄마가 하는 말은 무엇이든 반대로 말하였다. 엄마 말씀 word가 매개변수로 주어질 때, 아래 청개구리 사전을 참고해 반대로 변환하여 return 하도록 soluti'
 ---
 
@@ -10,110 +10,6 @@ summary: '🚀 기능 요구 사항 어느 연못에 엄마 말씀을 좀처럼 
 어느 연못에 엄마 말씀을 좀처럼 듣지 않는 청개구리가 살고 있었다. 청개구리는 엄마가 하는 말은 무엇이든 반대로 말하였다.
 
 엄마 말씀 word가 매개변수로 주어질 때, 아래 청개구리 사전을 참고해 반대로 변환하여 return 하도록 solution 메서드를 완성하라.
-
-A
-
-B
-
-C
-
-D
-
-E
-
-F
-
-G
-
-H
-
-I
-
-J
-
-K
-
-L
-
-M
-
-N
-
-O
-
-P
-
-Q
-
-R
-
-S
-
-T
-
-U
-
-V
-
-W
-
-X
-
-Y
-
-Z
-
-Z
-
-Y
-
-X
-
-W
-
-V
-
-U
-
-T
-
-S
-
-R
-
-Q
-
-P
-
-O
-
-N
-
-M
-
-L
-
-K
-
-J
-
-I
-
-H
-
-G
-
-F
-
-E
-
-D
-
-C
-
-B
-
-A
 
 ### 제한사항
 
