--- a/src/posts/코딩테스트-풀기--시저-암호.md
+++ b/src/posts/코딩테스트-풀기--시저-암호.md
@@ -1,7 +1,7 @@
 ---
 title: '[코딩테스트 풀기] 시저 암호'
 date: '2022-07-28'
-category: ''
+category: 'algorithm'
 summary: 'https://school.programmers.co.kr/learn/courses/30/lessons/12926'
 ---
 
