--- a/src/posts/코딩테스트-풀기--약수의-합.md
+++ b/src/posts/코딩테스트-풀기--약수의-합.md
@@ -1,7 +1,7 @@
 ---
 title: '[코딩테스트 풀기] 약수의 합'
 date: '2022-07-28'
-category: ''
+category: 'algorithm'
 summary: 'https://school.programmers.co.kr/learn/courses/30/lessons/12928'
 ---
 
