--- a/src/posts/코딩테스트-풀기--제일-작은-수-제거하기.md
+++ b/src/posts/코딩테스트-풀기--제일-작은-수-제거하기.md
@@ -1,7 +1,7 @@
 ---
 title: '[코딩테스트 풀기] 제일 작은 수 제거하기'
 date: '2022-07-28'
-category: ''
+category: 'algorithm'
 summary: '1. 처음 생각한 방식 arr를 오름차순으로 정렬한다. arr의 첫번째 인덱스 값을 알아낸다. 새로운 배열을 만드는데, 기존 arr에서 2의 값을 뺀 배열의 길이가 1보다 크지 않으면 [-1]을 반환 2. 잘 안되서 다시 생각한 방식 arr를 오름차순으로 정리한다'
 ---
 
