--- a/src/posts/프로그래머스--분수의-덧셈--최대-공약수-구하기---유클리드-호제법-.md
+++ b/src/posts/프로그래머스--분수의-덧셈--최대-공약수-구하기---유클리드-호제법-.md
@@ -1,7 +1,7 @@
 ---
 title: '[프로그래머스] 분수의 덧셈 (최대 공약수 구하기 / 유클리드 호제법)'
 date: '2023-02-25'
-category: ''
+category: 'algorithm'
 summary: '최대공약수를 어떻게 구하시나요?'
 ---
 
