--- a/src/posts/프로그래머스--분수의-덧셈--최대-공약수-구하기---유클리드-호제법-.md
+++ b/src/posts/프로그래머스--분수의-덧셈--최대-공약수-구하기---유클리드-호제법-.md
@@ -2,7 +2,7 @@
 title: '[프로그래머스] 분수의 덧셈 (최대 공약수 구하기 / 유클리드 호제법)'
 date: '2023-02-25'
 category: 'algorithm'
-summary: '최대공약수를 어떻게 구하시나요?'
+summary: '최대공약수를 구하는 2가지 방법에 대해서 생각해보자'
 ---
 
 회사에서 프로그래머스 문제풀이 스터디를 시작하였다!  
