--- a/src/posts/주소찾기 + 위도 경도 값도 같이 찾기.md
+++ b/src/posts/주소찾기 + 위도 경도 값도 같이 찾기.md
@@ -13,8 +13,8 @@ Daum에서 제공하는 주소찾기 서비스로 주소는 저장했는데,
 우선 이것을 구현하기 전에 미리 알고있어야 하는 것은
 '주소찾기 api'와 '지도에 표시 및 위도경도 찾기 api'가 별개라는 것이다. 주소찾기 서비스에서는 위도경도를 함께 반환해주지 않는다 ㅠㅠ
 
-주소찾기 api === 다음 지도찾기 서비스
-지도에 표시 및 위도경도 찾기 api === 카카오 맵 api
+- 주소찾기 api === 다음 지도찾기 서비스
+- 지도에 표시 및 위도경도 찾기 api === 카카오 맵 api
 
 두가지 모두 사용해야함!
 
