--- a/src/posts/우테코-프리코스--회고록.md
+++ b/src/posts/우테코-프리코스--회고록.md
@@ -3,6 +3,7 @@ title: '[우테코 프리코스] 4주간의 회고록'
 date: '2022-12-14'
 category: 'memoir'
 summary: '우아한 테크코스 4주간의 과제를 하며, 배웠던 점 + 느꼈던 점을 써보고자 한다.'
+pinned: true
 ---
 
 우아한 테크코스 4주간의 과제를 하며, 배웠던 점 + 느꼈던 점을 써보고자 한다.
