feat : 블로그 포스팅 수정 및 추가

--- a/src/posts/내가-알기-쉽고-남도-알기-쉬운-코드-쓰기.md
+++ b/src/posts/내가-알기-쉽고-남도-알기-쉬운-코드-쓰기.md
@@ -1,5 +1,5 @@
 ---
-title: '[우테코 프리코스] 4주간의 회고록'
+title: '나도 알기 쉽고, 남도 알기 쉬운 코드를 쓰자'
 date: '2022-12-14'
 category: 'memoir'
 summary: '우아한 테크코스 4주간의 과제를 하며, 배웠던 점 + 느꼈던 점을 써보고자 한다.'
