--- a/src/posts/벨로그-스크래퍼.md
+++ b/src/posts/벨로그-스크래퍼.md
@@ -1,5 +1,5 @@
 ---
-title: 'Velog 포스팅 스크래퍼 만들기 (feat.puppeteer)'
+title: '개인 블로그로 이전하며 Velog 포스팅 스크래퍼 만들기 (feat.puppeteer)'
 date: '2023-05-20'
 category: 'etc'
 summary: '개인 블로그로 이전 프로젝트! 벨로그 글을 md파일로 다 긁어오기..!'
