feat : 포스팅 수정사항 반영

--- a/src/posts/벨로그-스크래퍼.md
+++ b/src/posts/벨로그-스크래퍼.md
@@ -362,7 +362,7 @@ function createMarkdownFile(data) {
 }
 ```
 
-그리하여 완성된 벨로그 크롤러!
+그리하여 완성된 벨로그 크롤러 코드이다.
 
 ```js
 const puppeteer = require('puppeteer');
