--- a/src/posts/프로그래머스--분수의-덧셈--최대-공약수-구하기---유클리드-호제법-.md
+++ b/src/posts/프로그래머스--분수의-덧셈--최대-공약수-구하기---유클리드-호제법-.md
@@ -134,5 +134,5 @@ const getGcd = (num1, num2) => {
 ### 느낀점
 
 - 코딩테스트 문제를 풀다가 이게 수학적으로 생각하면 풀 수 있는데, 코드로 치려고 하니까 어떻게 쳐야할 지 모르겠어서 이중,, 삼중,, 포문을 사용해서 꾸역꾸역 해낸 경우가 많다.
-- 우리가 최대공약수를 구할때 1부터 나눠보면서 하지 않는 것처럼 말이다 ^^
-- 수학적으로 풀 수 있는 문제는 어떻게든 코드로 구현할 수 있지 않겠냐!!! 라는 것을 깨달음. 지금까지 풀었던 저난이도 문제들을 좀 더 시간 복잡도를 생각하는 방향으로 풀이 방식을 개선해보아야겠다.
+- 우리가 최대공약수를 구할때 1부터 나눠보면서 하지 않는 것처럼 말이다.
+- 수학적으로 풀 수 있는 문제는 어떻게든 코드로 구현할 수 있지 않겠냐는 것을 깨달음. 지금까지 풀었던 저난이도 문제들을 좀 더 시간 복잡도를 생각하는 방향으로 풀이 방식을 개선해보아야겠다.
