fix : 포스팅 내용 수정

--- a/src/posts/파스칼의-삼각형.md
+++ b/src/posts/파스칼의-삼각형.md
@@ -86,7 +86,21 @@ const getPascalArray2 = (row) => {
 };
 ```
 
-## 시간 비교
+## 시간 복잡도 비교
+
+- 처음 구현했던 함수의 시간 복잡도는 O(n^3) 이다.
+
+  - 외부 for문에서 1부터 입력된 행까지 순회한다. 총 n번 반복됨
+  - 내부 for문에서 1부터 현재 행까지 순회한다. 총 n번 반복됨.
+  - 각 내부 for문에서 getPascalNum 함수를 호출하여 파스칼 숫자를 계산. getPascalNum 함수는 재귀적으로 호출되며, 행과 열을 인자로 받고, 재귀 호출을 통해 상위 행의 값을 계산하기 위해 이 함수가 또 호출된다.
+
+- 두번째 구현했던 함수의 시간 복잡도는 O(n^2) 이다.
+
+  - 외부 for문에서 0부터 입력된 행까지 순회한다. 총 n번 반복됨
+  - 내부 for문에서 0부터 현재 행까지 순회한다. 총 n번 반복됨
+  - 각 내부 for문에서는 각 행의 파스칼 숫자를 직접 계산하는데, 이전 행의 결과를 활용하여 계산
+
+## 실제 시간 비교
 
 - 각각의 함수가 실행되는 시간을 비교해보니 아래와 같다.
   ![](https://velog.velcdn.com/images/jiwonyyy/post/d872c797-a76d-4ba9-95ed-400b54ed127f/image.png)
@@ -94,4 +108,4 @@ const getPascalArray2 = (row) => {
 
 ## 느낀 점
 
-이게 내가 만든 웹사이트에 필요한 계산이었다면 어떻게 됐을까? 조금만 값이 커져도 성능이 급격히 떨어지며 사용자들이 우수수 이탈했을 것이다 ㅠㅠ 불필요한 계산의 무서움을 알 수 있었던 경험이었다 ~! 단순히 기능이 어찌저찌 돌아가면 끝. 이 아니라 계속해서 문제점을 찾아서 개선해 나가야겠다고 다짐
+이게 내가 만든 웹사이트에 필요한 계산이었다면 어떻게 됐을까? 조금만 값이 커져도 성능이 급격히 떨어지며 사용자들이 우수수 이탈했을 것이다 ㅠㅠ 불필요한 계산의 무서움을 알 수 있었던 경험이었다. 단순히 기능이 어찌저찌 돌아가면 끝. 이 아니라 계속해서 문제점을 찾아서 개선해 나가야겠다고 다짐
